--- a/Kmeans/kmeans.ipynb
+++ b/Kmeans/kmeans.ipynb
@@ -245,7 +245,7 @@
     "        distances = np.zeros((self.X_train.shape[0], self.n_clusters))\n",
     "        min_distances = np.zeros(self.X_train.shape[0])\n",
     "        for eg in np.arange(self.X_train.shape[0]):\n",
-    "            distances[eg] = np.linalg.norm(self.X_train[eg]-self.centroids)\n",
+    "            distances[eg] = np.linalg.norm(self.X_train[eg]-self.centroids, axis = 1)\n",
     "            min_distances[eg], self.cluster_assignments[eg] = np.min(distances[eg]), np.argmin(distances[eg])\n",
     "        return np.sum(min_distances)\n",
     "    \n",
